fix: fix layout shift

--- a/app/app.css
+++ b/app/app.css
@@ -123,5 +123,7 @@
     html,
     body {
         @apply bg-background text-foreground;
+        width: 100%;
+        height: 100%;
     }
 }
